<resources>
    <!--
   * CS533 Mobile App
   * https://github.com/TotallyMonica/CS533MobileApp
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
    <string name="app_name">CS533 Mobile App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="invalid_query_uri">Invalid query URI: </string>
    <string name="invalid_insert_uri">Invalid insert URI: </string>
    <string name="invalid_update_uri">Invalid update URI: </string>
    <string name="invalid_delete_uri">Invalid delete URI: </string>
    <string name="insert_failed">Insert failed: </string>
    <string name="account_added">Account added successfully!</string>
    <string name="account_not_added">Account wasn\'t added due to an error</string>
    <string name="account_updated">Account updated successfully!</string>
    <string name="account_not_updated">Account wasn\'t added due to an error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="action_Cart">Cart</string>
    <string name="banglore">Banglore</string>
    <string name="mobile">Mobile: </string>
    <string name="Test_dash"> Test User</string>
    <string name="Test_gmail_com">Testuser@gmail.com</string>
    <string name="address">Address :</string>
    <string name="_9778178337">9778178337</string>
    <string name="emailProfile">Email: </string>
    <string name="name">Name: </string>
    <string name="let_s_shopping">Let\'s Shopping</string>
    <string name="total">Total: </string>
    <string name="_12">$12</string>
    <string name="todo">TODO</string>
    <string name="checkout">Checkout</string>
</resources>
