<?xml version="1.0" encoding="utf-8"?>
<!--
   * CS533 Mobile App
   * https://github.com/TotallyMonica/CS533MobileApp
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D9FFFFFF">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:src="@drawable/no_image"
                    app:civ_border_color="@color/gray_btn_bg_color"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/santosh_kumar_dash" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardBorderColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emailProfile" />

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/santoshnet2016_gmail_com" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardBorderColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile" />

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_9778178337" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardBorderColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewSansRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/banglore" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardBorderColor" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>