<?xml version="1.0" encoding="utf-8"?>
    <!--
    * CS533 Mobile App
    * https://github.com/TotallyMonica/CS533MobileApp
    * Created on 18-Feb-2019.
    * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_text"
    tools:context=".activity.CartActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3FFFFFF" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

        </androidx.recyclerview.widget.RecyclerView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="49dp"
            android:background="@color/cardBorderColor" />

        <LinearLayout
            android:id="@+id/checkout_LL"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewMeriendaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewMeriendaRegular
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="onCheckoutClicked"
                android:orientation="horizontal">

                <com.github.totallymonica.cs533mobileapp.customfonts.MyTextViewMeriendaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout"
                    android:textColor="@color/buttonTxt"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <ImageView
        android:id="@+id/empty_cart_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/empty_cart_img"
        android:contentDescription="@string/todo"
        android:visibility="gone" />


</RelativeLayout>